# fomc-scraper

./: .gitignore  README.md  _quick_parse_check.py  _quick_parse_df.py  _save_current_to_csv.py  _save_future_to_csv.py  _save_historical_to_csv.py  pyproject.toml
fomc_scraper/: __init__.py  fetch.py  parse_current.py  parse_future.py  parse_historical.py
